# Brunel

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
agents/: __init__.py  interfaces.py  registry.py
app/: __init__.py  api.py  bootstrap.py  change_cli.py  cli.py  commissioning_api.py  commissioning_cli.py  contract_api.py  contract_cli.py  drawing_api.py  drawing_cli.py  drawing_demo.py  enterprise_api.py  enterprise_cli.py  field_api.py  field_cli.py  integration_api.py  integration_cli.py  meeting_api.py  meeting_cli.py  meeting_demo.py  p6_api.py  p6_cli.py  procurement_api.py  procurement_cli.py  rfi_api.py  rfi_cli.py  rfi_demo.py  risk_api.py  risk_cli.py  schedule_api.py  schedule_cli.py  submittal_api.py  submittal_attachment_api.py  submittal_attachment_cli.py  submittal_attachment_demo.py  submittal_cli.py  submittal_demo.py
change_workflow/: __init__.py  admission.py  dashboard.py  errors.py  models.py  notifications.py  qa.py  repository.py  service.py  staleness.py
commissioning_intelligence/: __init__.py  models.py  qa.py  repository.py  service.py
config/: __init__.py  constants.py  example.env  settings.py
contract_intelligence/: __init__.py  models.py  qa.py  repository.py  service.py
core/: __init__.py  container.py  logging.py
docs/: api.md  architecture.md  commissioning-turnover-intelligence.md  configuration.md  contract-intelligence-foundation.md  daily-reports-field-intelligence.md  document-ingestion.md  drawing-intelligence-foundation.md  enterprise-project-intelligence.md  integration-adapter-framework.md  meeting-minutes-action-tracking.md  primavera-p6-schedule-adapter.md  privacy-and-security.md  procurement-intelligence.md  product-vision.md  retrieval-and-cited-qa.md  revision-intelligence.md  revision-review-workflow.md  rfi-automation.md  risk-commitment-intelligence.md  roadmap.md  schedule-intelligence-foundation.md  submittal-attachment-intelligence.md  submittal-automation.md  vision.md
document_processing/: __init__.py  chunking.py  errors.py  extractors.py  interfaces.py  loaders.py  metadata.py  models.py  service.py
drawing_intelligence/: __init__.py  extraction.py  models.py  ocr.py  qa.py  rendering.py  reporting.py  repository.py  service.py  templates.py
enterprise_intelligence/: __init__.py  models.py  qa.py  repository.py  service.py
field_intelligence/: __init__.py  models.py  qa.py  repository.py  service.py
integration_adapters/: __init__.py  interfaces.py  models.py  reference.py  registry.py  repository.py  service.py
meeting_tracking/: __init__.py  extraction.py  models.py  qa.py  repository.py  service.py
models/: __init__.py  common.py
p6_adapter/: __init__.py  adapter.py  models.py  parser.py  service.py
procurement/: __init__.py  models.py  qa.py  reporting.py  repository.py  service.py
prompts/: __init__.py  grounded_qa.py  interfaces.py
rag/: __init__.py  assessment.py  citations.py  errors.py  interfaces.py  models.py  providers.py  qa.py  query.py  retrieval.py
revision_intelligence/: __init__.py  alignment.py  classification.py  differ.py  errors.py  interfaces.py  lineage.py  models.py  normalization.py  qa.py  rendering.py  repository.py  service.py  significance.py
rfi/: __init__.py  drafting.py  errors.py  models.py  notifications.py  numbering.py  qa.py  reporting.py  repository.py  service.py
risk_intelligence/: __init__.py  models.py  qa.py  repository.py  service.py
storage/: __init__.py  (+2 more)
(+67 files in other folders)
