[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-project-engineer"
version = "0.1.0"
description = "A local construction project organization and responsibility registry"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1", "uvicorn[standard]==0.35.0", "sqlalchemy==2.0.41",
  "pydantic==2.11.7", "jinja2==3.1.6", "python-multipart==0.0.20"
]

[project.optional-dependencies]
test = ["pytest==8.4.1", "httpx==0.28.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_project_engineer = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

