[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "brunel"
version = "0.1.0"
description = "Brunel: an elite AI construction copilot"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.41",
  "pydantic==2.11.7",
  "jinja2==3.1.6",
  "python-multipart==0.0.20",
  "pypdf==5.7.0",
]

[project.optional-dependencies]
test = [
  "pytest==8.4.1",
  "httpx==0.28.1",
  "reportlab==4.4.2",
]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
  "reportlab==4.4.2",
  "ruff>=0.12,<0.13",
  "mypy>=1.16,<2",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = [
  "ai_project_engineer*", "app*", "core*", "agents*", "document_processing*",
  "rag*", "tools*", "workflows*", "models*", "prompts*", "storage*", "config*",
  "revision_intelligence*", "change_workflow*", "rfi*", "submittal*",
  "drawing_intelligence*",
  "meeting_tracking*",
  "procurement*",
  "schedule_intelligence*",
  "field_intelligence*",
]

[tool.setuptools.package-data]
ai_project_engineer = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/ai_project_engineer"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E701", "E702"]
"tests/test_models.py" = ["E701", "E702"]
"tests/test_routes.py" = ["E701", "E702"]
"tests/test_services.py" = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
